// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Encounter renders correctly with showHp: Encounter with showHp 1`] = `
<body>
  <div>
    <h1>
      Test Encounter
       Lvl 
      1
    </h1>
    <div
      class="progress-container"
    >
      <p
        class="hint-text"
      >
         HP 
        50
        /
        100
      </p>
      <div
        class="rpgui-progress"
        data-rpguitype="progress"
      >
        <div
          class=" rpgui-progress-track"
        >
          <div
            class="rpgui-progress-fill red progress-animation"
            style="left: 0px; width: 50%;"
          />
        </div>
        <div
          class=" rpgui-progress-left-edge"
        />
        <div
          class=" rpgui-progress-right-edge"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Encounter renders correctly: Encounter 1`] = `
<body>
  <div>
    <h1>
      Test Encounter
       Lvl 
      1
    </h1>
  </div>
</body>
`;
